[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "crhelper"
version = "2.0.12"
description = "crhelper simplifies authoring CloudFormation Custom Resources"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [
    { name = "Jay McConnell", email = "jmmccon@amazon.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "boto3>=1.9.108",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/aws-cloudformation/custom-resource-helper"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
crhelper = ["py.typed", "*.pyi"]

[tool.coverage.run]
branch = true
source = ["crhelper"]

[tool.coverage.report]
show_missing = true
