[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cfn-resource-helper"
version = "2.2.0"
description = "crhelper simplifies authoring CloudFormation Custom Resources"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [
    { name = "Jay McConnell", email = "jmmccon@amazon.com" },
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "boto3>=1.9.108",
]

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "ruff",
    "mypy",
]
# Default group (installed by `uv sync` with no args). Meta-group covering
# everything a contributor needs locally.
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[project.urls]
Homepage = "https://github.com/aws-cloudformation/custom-resource-helper"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
crhelper = ["py.typed", "*.pyi"]

[tool.coverage.run]
branch = true
source = ["crhelper"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade (we're on 3.11+)
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line-too-long; line-length is advisory only
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B011",  # asserts in tests are fine
]

[tool.mypy]
python_version = "3.11"
files = ["crhelper"]
# boto3 doesn't ship inline types; users typically install boto3-stubs only when needed.
ignore_missing_imports = true
# Reasonable starting point; tighten over time.
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
